--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-
 width, initial-scale=1.0">
@@ -14,9 +15,10 @@ width, initial-scale=1.0">
     </header>
     <main>
         <h2>Narika Hall</h2>
-        <p> I am 22 years old. I love oranges and coffee. My favourite colour is pink and I am looking forward to learning
-            a lot from this course. After completing my Computer Science degree, I plan to venture into Entrprenuership,
-            Web, App Development and Data Science.</p>
+        <p> I am 22 years old. I love oranges and coffee. My favourite colour is pink. After completing my Computer Science degree,
+            I plan to venture into Entrprenuership, Web, App Development and Data Science. Surfing the internet and seeing different
+            webpages but specifically Apple's, has fuelled my interest in Web Development as I would want to be a developer behind 
+            incredible websites like that. This is the beginning and I am looking forward to learning a lot from this course.  </p>
     </main>
     <footer>
         <p>Copyright &copy; 2020 Narika Hall.</p>
