Added image of coffee

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ width, initial-scale=1.0">
             webpages but specifically Apple's, has fuelled my interest in Web Development as I would want to be a developer behind 
             incredible websites like that. This is the beginning and I am looking forward to learning a lot from this course.  </p>
     </main>
+    <img src="coffee.jpg" alt="Cup of coffee" style="width:200px;height:250px;">
     <footer>
         <p>Copyright &copy; 2020 Narika Hall.</p>
     </footer>
